remove unused + claimed + visual layout updates

--- a/app/sass/components/entries/entry.scss
+++ b/app/sass/components/entries/entry.scss
@@ -7,28 +7,37 @@
   margin: 0 $gutter $gutter $gutter;
   position: relative;
 
+  &.claimed {
+    background: $c-background;
+
+    .title {
+      background-color: rgba($c-primary, 0.45);
+      margin-top: 0;
+      padding-right: 80px;
+
+      &::after {
+        content: 'Claimed';
+        right: 15px;
+        position: absolute;
+        top: 15px;
+      }
+    }
+
+    .desc {
+      display: none;
+    }
+  }
+
   .title {
     align-items: stretch;
     background-color: $c-primary;
-    box-shadow: inset -2px 0 3px 0 rgba($c-dark, 0.25);
     color: $c-light;
     display: flex;
     flex-direction: column;
     height: 50px;
     justify-content: center;
     margin-top: 15px;
-    padding: 0 50px 0 10px;
-  }
-
-  .external {
-    align-items: center;
-    display: flex;
-    height: 50px;
-    justify-content: center;
-    position: absolute;
-    right: 0;
-    top: 15px;
-    width: 50px;
+    padding: 0 10px;
   }
 
   .desc {
@@ -42,25 +51,15 @@
     }
   }
 
-  .stamp {
-    font-size: 9px;
-    line-height: 14px;
-    margin-bottom: -2em;
-    text-align: right;
-  }
-
   @include breakpoint(small) {
-    margin: $gutter ($gutter + 50px) $gutter $gutter;
+    margin: $gutter $gutter;
 
     .title {
       padding-right: 160px;
     }
 
-    .external {
-      background-color: $c-primary;
-      box-shadow: 0 2px 4px 0 rgba($c-dark, 0.35);
-      right: -50px;
-      top: 13px;
+    .img {
+      width: 60%;
     }
 
     .desc {
@@ -68,16 +67,8 @@
     }
 
     .content {
-      width: 70%;
-    }
-
-    .stamp {
-      bottom: 0;
-      margin-bottom: 0;
-      position: absolute;
-      right: -70px;
-      text-align: left;
-      width: 65px;
+      margin-left: 5%;
+      width: 35%;
     }
   }
 }
