--- a/app/sass/sections/main.scss
+++ b/app/sass/sections/main.scss
@@ -20,10 +20,6 @@ main {
     width: 100%;
   }
 
-  .controls.letters {
-    display: none;
-  }
-
   .entries {
     display: flex;
     flex-direction: column;
@@ -38,16 +34,8 @@ main {
       @include columns(4);
 
       .controls.tags {
-        @include columns(9);
         height: 100%;
         order: 1;
-      }
-
-      .controls.letters {
-        @include columns(3);
-        display: flex;
-        height: 100%;
-        order: 2;
       }
     }
 
@@ -62,14 +50,6 @@ main {
   @include breakpoint(medium) {
     .control-wrapper {
       @include columns(3);
-
-      .controls.tags {
-        @include columns(8);
-      }
-
-      .controls.letters {
-        @include columns(4);
-      }
     }
 
     .entries {
@@ -81,15 +61,12 @@ main {
   // MQ xLarge
   @include breakpoint(xlarge) {
     .control-wrapper {
-      width: 370px;
-    }
-
-    .controls.letters {
-      margin-right: 10%;
+      width: 200px;
     }
 
     .entries {
-      margin-left: 370px;
+      width: 100%;
+      margin-left: 200px;
     }
   }
 }
