data - clean up / start

--- a/app/sass/sections/footer.scss
+++ b/app/sass/sections/footer.scss
@@ -4,6 +4,7 @@
 footer {
   align-items: center;
   display: flex;
+  color: rgba($c-dark, 0.5);
   justify-content: center;
   margin: $gutter auto 0 auto;
   max-width: $xlarge;
