--- a/app/sass/components/entries/entry.scss
+++ b/app/sass/components/entries/entry.scss
@@ -58,8 +58,25 @@
       padding-right: 160px;
     }
 
-    .img {
+    .images {
       width: 60%;
+
+      .img {
+        @include columns(6);
+        display: inline-block;
+        padding-left: 5px;
+        padding-bottom: 5px;
+
+        &:nth-child(even) {
+          padding-left: 0;
+          padding-right: 5px;
+        }
+
+        &.first {
+          @include columns(12);
+          padding: 0 0 5px 0;
+        }
+      }
     }
 
     .desc {
