--- a/app/sass/components/entries/entry.scss
+++ b/app/sass/components/entries/entry.scss
@@ -44,8 +44,8 @@
     padding: 10px;
 
     .notes {
-      color: $c-secondary;
-      font-size: 11px;
+      color: $c-accent-dark;
+      font-size: 12px;
       font-style: italic;
       padding-bottom: 1em;
     }
